@@ -2,7 +2,7 @@
   % my $menu = schema->resultset('Menu')->single({name => 'main'});
   % my @pages = @{ Mojo::JSON->new->decode($menu->list) };
   % my $rs = schema->resultset('Page');
-  <div class="well" style="padding: 8px 0;">
+  <div class="well" id="nav_menu" style="padding: 8px 0;">
     <ul id="main" class="nav nav-list">
       <li class="nav-header">Navigation</li>
       <li><a href="/">Home</a></li>
